version 5 Issue#1: Reduce the gap between the list items. See the comparison with inEight.com website and fabecit website below.

--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -379,7 +379,7 @@ button.navbar-toggle, .navbar-inverse .navbar-toggle:hover, .navbar-inverse .nav
         text-align:center;
         text-transform:uppercase;
         word-wrap: break-word;
-        padding: 1em;
+        padding: 8px 14px;
         font-size: 22px;
     }
 }
@@ -400,7 +400,7 @@ button.navbar-toggle, .navbar-inverse .navbar-toggle:hover, .navbar-inverse .nav
         text-align:center;
         text-transform:uppercase;
         word-wrap: break-word;
-        padding: 1em;
+        padding: 8px 14px;
         font-size: 22px;
 }
 
